--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
     <title>web</title>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAANLOPRQz38MxDHtld75-K6SapiN4r3ZY"></script>
   </head>
   <body>
     <noscript>
